--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: Minimal theme
+title: Bing's Page
 logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
-show_downloads: true
+description: A experienced software engineer's page
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-minimal
