fix: page rendering

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: "Bing's Page"
 logo: /assets/img/IMG_0934.jpg
-description: "A experienced software engineer's page.\nEmail:k.thomas.tong@gmail.com"
+description: "An experienced software engineer's page.\nEmail:k.thomas.tong@gmail.com"
 show_downloads: false
 # google_analytics:
 theme: jekyll-theme-minimal
